style: :lipstick: Add UI: Calculator screen, display, and buttons Day 1 (Unfinished)

--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,11 @@
 html {
     font-family: 'Ubuntu', Courier, monospace;
     color: var(--color3);
-    margin: 0;
 }
 
 body {
     background-color: var(--color1);
+    margin: 0;
 }
 
 body h1 {
@@ -34,3 +34,47 @@ body h1 img {
     width: auto;
 }
 
+#calc-container {
+    background-color: var(--color3);
+    min-height: fit-content;
+    height: 600px;
+    max-height: max-content;
+    width: 450px;
+    
+    margin: 0 auto;
+    gap: 3%;
+
+    border-radius: 3rem;
+
+    display: flex;
+    flex-direction: column;
+    padding: 1.5%;
+}
+
+#calc-container #screen{
+    font-size: 3em;
+    border-radius: 1rem;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    padding: 6px 0;
+    gap: 1em;
+
+    font-size: 1rem;
+    background-color: var(--color3);
+}
+
+footer img {
+    height: 2rem;
+}
+
+footer a {
+    text-decoration: none;
+    color: whitesmoke;
+}
