style: :lipstick: Initial UI complete (no mobile responsiveness)

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
     --color3: #111626;
     --color4: #F2B199;
     --color5: #D97777;
-
 }
 
 
@@ -39,21 +38,39 @@ body h1 img {
     min-height: fit-content;
     height: 600px;
     max-height: max-content;
-    width: 450px;
-    
+    width: 450px;  
     margin: 0 auto;
-    gap: 3%;
-
+    gap: 2rem;
     border-radius: 3rem;
-
     display: flex;
     flex-direction: column;
-    padding: 1.5%;
+    padding: 2rem;
+
+    box-shadow: 4px 3px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 #calc-container #screen{
-    font-size: 3em;
+    font-size: 4em;
     border-radius: 1rem;
+
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
+    background-color: var(--font-color);
+}
+
+.btn-container {
+    display: grid;
+    grid-template: repeat(5,1fr) / repeat(4,1fr);
+    height: 80%;
+    grid-gap: 1rem;
+    border-top: 3px solid #303440;
+    padding: 1rem;
+}
+
+.btn-container button {
+    font-size: 2rem;
+    border-radius: 2rem;
+    height: 80%;
+    text-align: center;
 }
 
 footer {
