--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,9 @@ html {
 body {
     background-color: var(--color1);
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
 }
 
 body h1 {
@@ -39,12 +42,14 @@ body h1 img {
     height: 600px;
     max-height: max-content;
     width: 450px;  
-    margin: 0 auto;
+    align-self: center;
+
     gap: 2rem;
     border-radius: 3rem;
     display: flex;
     flex-direction: column;
     padding: 2rem;
+    margin-bottom: 4rem;
 
     box-shadow: 4px 3px 2px 2px rgba(0, 0, 0, 0.4);
 }
@@ -55,6 +60,8 @@ body h1 img {
 
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
     background-color: var(--font-color);
+    text-align: end;
+    overflow: scroll;
 }
 
 .btn-container {
@@ -77,8 +84,8 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
     bottom: 0;
+    position: fixed;
     width: 100vw;
     padding: 6px 0;
     gap: 1em;
